force-app/main/default/objects/VOB__c/fields/Last_Verified_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Verified_Date__c</fullName>
    <description>The date when the insurance information was last verified.</description>
    <label>Last Verified Date</label>
    <type>Date</type>
</CustomField>