force-app/main/default/objects/VOB__c/fields/Lifetime_Reserve_Days__c.field-meta.xml
<CustomField>
    <fullName>Lifetime_Reserve_Days__c</fullName>
    <description>Once a patient exhausts their regular Medicare benefit days within a benefit period, they enter into their Lifetime Reserve Days. Lifetime Reserve Days are additional days of coverage that Medicare provides for hospital stays beyond the regular benefit period.

This is crucial for hospital to take decision.</description>
    <label>Lifetime Reserve Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>