force-app/main/default/objects/VOB__c/fields/Medical_Rep_Ref__c.field-meta.xml
<CustomField>
    <fullName>Medical_Rep_Ref__c</fullName>
    <label>Medical Rep &amp; Ref#</label>
    <length>100</length>
    <type>Text</type>
</CustomField>