force-app/main/default/objects/VOB__c/fields/Member_Id__c.field-meta.xml
<CustomField>
    <fullName>Member_Id__c</fullName>
    <description>Unique identifier for the insurance member.</description>
    <label>Member Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>