force-app/main/default/objects/VOB__c/fields/Member_Number__c.field-meta.xml
<CustomField>
    <fullName>Member_Number__c</fullName>
    <description>Unique identifier for the insurance member.</description>
    <label>Member Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>