force-app/main/default/objects/VOB__c/fields/Member_Plan_Name__c.field-meta.xml
<CustomField>
    <fullName>Member_Plan_Name__c</fullName>
    <description>Name of the plan associate with the insurance member.</description>
    <label>Member Plan Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>