force-app/main/default/objects/VOB__c/fields/Most_recent_effective_date__c.field-meta.xml
<CustomField>
    <fullName>Most_recent_effective_date__c</fullName>
    <label>Most recent effective date</label>
    <type>Date</type>
</CustomField>