force-app/main/default/objects/VOB__c/fields/NameOfPayer__c.field-meta.xml
<CustomField>
    <fullName>NameOfPayer__c</fullName>
    <label>What’s the name of that payer?</label>
    <length>250</length>
    <type>Text</type>
</CustomField>