force-app/main/default/objects/VOB__c/fields/Need_JCAHO_CARF_PHP_IOP_OP__c.field-meta.xml
<CustomField>
    <fullName>Need_JCAHO_CARF_PHP_IOP_OP__c</fullName>
    <inlineHelpText>Do we need to have JCAHO or CARF accreditation for PHP, IOP and OP?</inlineHelpText>
    <label>Need JCAHO/CARF for PHP, IOP, OP?</label>
    <length>250</length>
    <type>Text</type>
</CustomField>