force-app/main/default/objects/VOB__c/fields/Need_JCAHO_CARF_Resi_SADetox__c.field-meta.xml
<CustomField>
    <fullName>Need_JCAHO_CARF_Resi_SADetox__c</fullName>
    <inlineHelpText>Do we need to have JCAHO or CARF accreditation for Res and Sub Acute Detox?</inlineHelpText>
    <label>Need JCAHO/CARF for Res+Sub Acute Detox?</label>
    <length>250</length>
    <type>Text</type>
</CustomField>