force-app/main/default/objects/VOB__c/fields/NeedToUpdateOtherInsurance__c.field-meta.xml
<CustomField>
    <fullName>NeedToUpdateOtherInsurance__c</fullName>
    <label>Do they need to update it?</label>
    <length>250</length>
    <type>Text</type>
</CustomField>