force-app/main/default/objects/VOB__c/fields/OOP__c.field-meta.xml
<CustomField>
    <fullName>OOP__c</fullName>
    <label>OOP</label>
    <length>100</length>
    <type>Text</type>
</CustomField>