force-app/main/default/objects/VOB__c/fields/OOP_In_Net_OP__c.field-meta.xml
<CustomField>
    <fullName>OOP_In_Net_OP__c</fullName>
    <label>OOP(In-Net)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>