force-app/main/default/objects/VOB__c/fields/OOP_Out_Net_OP__c.field-meta.xml
<CustomField>
    <fullName>OOP_Out_Net_OP__c</fullName>
    <label>OOP(Out-Net)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>