force-app/main/default/objects/VOB__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to associate the Patient Name with Opportunity.</description>
    <label>Patient Name</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Insurance</relationshipLabel>
    <relationshipName>VOB</relationshipName>
    <type>Lookup</type>
</CustomField>