force-app/main/default/objects/VOB__c/fields/Other_Accident__c.field-meta.xml
<CustomField>
    <fullName>Other_Accident__c</fullName>
    <description>Indicates if the case involves another type of accident.</description>
    <label>Other Accident</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>