force-app/main/default/objects/VOB__c/fields/Other_Insurance_Resi__c.field-meta.xml
<CustomField>
    <fullName>Other_Insurance_Resi__c</fullName>
    <inlineHelpText>All other Insurance Residential (H0017 – Rev code 1002)</inlineHelpText>
    <label>All other Ins. Resi.(H0017 Revcode 1002)</label>
    <length>250</length>
    <type>Text</type>
</CustomField>