force-app/main/default/objects/VOB__c/fields/Other_Insured_Policy_Group_FECA_Number__c.field-meta.xml
<CustomField>
    <fullName>Other_Insured_Policy_Group_FECA_Number__c</fullName>
    <description>Group or FECA number associate with other insured.</description>
    <label>Other Insured Policy Group / FECA Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>