force-app/main/default/objects/VOB__c/fields/Other_Insured_s_Name__c.field-meta.xml
<CustomField>
    <fullName>Other_Insured_s_Name__c</fullName>
    <description>Represents the name of the other insured.</description>
    <label>Other Insured&apos;s Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>