force-app/main/default/objects/VOB__c/fields/OtherInsurancePlanName__c.field-meta.xml
<CustomField>
    <fullName>OtherInsurancePlanName__c</fullName>
    <description>Represents the name of the other insured plan name.</description>
    <label>OtherInsurancePlanName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>