force-app/main/default/objects/VOB__c/fields/Out_Network_OON__c.field-meta.xml
<CustomField>
    <fullName>Out_Network_OON__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the insurance provider is out of the network.</description>
    <label>Out Network(OON)</label>
    <type>Checkbox</type>
</CustomField>