force-app/main/default/objects/VOB__c/fields/Out_of_Net_Co_Payment__c.field-meta.xml
<CustomField>
    <fullName>Out_of_Net_Co_Payment__c</fullName>
    <label>Co-Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>