force-app/main/default/objects/VOB__c/fields/OutOfNetwork_Fee_Schedule__c.field-meta.xml
<CustomField>
    <fullName>OutOfNetwork_Fee_Schedule__c</fullName>
    <label>What is the out-of-network fee schedule?</label>
    <length>250</length>
    <type>Text</type>
</CustomField>