force-app/main/default/objects/VOB__c/fields/OutOfPocket__c.field-meta.xml
<CustomField>
    <fullName>OutOfPocket__c</fullName>
    <label>What is the Out-of-pocket?</label>
    <length>250</length>
    <type>Text</type>
</CustomField>