force-app/main/default/objects/VOB__c/fields/OutOfPocketMet__c.field-meta.xml
<CustomField>
    <fullName>OutOfPocketMet__c</fullName>
    <label>Have they met the Out-of-pocket?</label>
    <length>250</length>
    <type>Text</type>
</CustomField>