force-app/main/default/objects/VOB__c/fields/Patient_Address__c.field-meta.xml
<CustomField>
    <fullName>Patient_Address__c</fullName>
    <description>Represents the Address of patient.</description>
    <label>Patient Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>