force-app/main/default/objects/VOB__c/fields/Patient_Birth_Date__c.field-meta.xml
<CustomField>
    <fullName>Patient_Birth_Date__c</fullName>
    <description>The date of birth of the patient.</description>
    <label>Patient Birth Date</label>
    <type>Date</type>
</CustomField>