force-app/main/default/objects/VOB__c/fields/Patient_Relationship_With_Insured__c.field-meta.xml
<CustomField>
    <fullName>Patient_Relationship_With_Insured__c</fullName>
    <description>The relationship of the patient to the insured individual, such as Self, Spouse, Child, Employee, Other Adult, Unknown, Daughter etc.</description>
    <label>Patient Relationship With Insured</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Self</fullName>
            </value>
            <value>
                <fullName>Spouse</fullName>
            </value>
            <value>
                <fullName>Child</fullName>
            </value>
            <value>
                <fullName>Employee</fullName>
            </value>
            <value>
                <fullName>Other Adult</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Daughter</fullName>
            </value>
            <value>
                <fullName>Employer</fullName>
            </value>
            <value>
                <fullName>Father</fullName>
            </value>
            <value>
                <fullName>Husband</fullName>
            </value>
            <value>
                <fullName>Mother</fullName>
            </value>
            <value>
                <fullName>Son</fullName>
            </value>
            <value>
                <fullName>Wife</fullName>
            </value>
            <value>
                <fullName>Grandparent</fullName>
            </value>
            <value>
                <fullName>Grandchild</fullName>
            </value>
            <value>
                <fullName>Nephew</fullName>
            </value>
            <value>
                <fullName>niece</fullName>
            </value>
            <value>
                <fullName>Foster Child</fullName>
            </value>
            <value>
                <fullName>Ward</fullName>
            </value>
            <value>
                <fullName>Stepson or Stepdaughter</fullName>
            </value>
            <value>
                <fullName>Handicapped Dependent</fullName>
            </value>
            <value>
                <fullName>Sponsored Dependent</fullName>
            </value>
            <value>
                <fullName>Dependent of Minor Dependent</fullName>
            </value>
            <value>
                <fullName>Significant Other</fullName>
            </value>
            <value>
                <fullName>Emancipated minor</fullName>
            </value>
            <value>
                <fullName>Organ Donor</fullName>
            </value>
            <value>
                <fullName>Cadaver Donor</fullName>
            </value>
            <value>
                <fullName>Injured Plaintiff</fullName>
            </value>
            <value>
                <fullName>Life Partner</fullName>
            </value>
            <value>
                <fullName>Dependent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>