force-app/main/default/objects/VOB__c/fields/Patient_Responsibility__c.field-meta.xml
<CustomField>
    <fullName>Patient_Responsibility__c</fullName>
    <description>The charges that will be borne by the Patient.</description>
    <label>Patient Responsibility</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>