force-app/main/default/objects/VOB__c/fields/Patient_s_Gender__c.field-meta.xml
<CustomField>
    <fullName>Patient_s_Gender__c</fullName>
    <description>The gender of the patient.</description>
    <label>Patient&apos;s Gender</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Female</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>