force-app/main/default/objects/VOB__c/fields/Patient_SSN__c.field-meta.xml
<CustomField>
    <fullName>Patient_SSN__c</fullName>
    <description>Represents the SSN Number of patient.</description>
    <label>Patient SSN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>