force-app/main/default/objects/VOB__c/fields/Patient_under_care__c.field-meta.xml
<CustomField>
    <fullName>Patient_under_care__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field Indicates whether the patient is currently under the care of a healthcare provider.</description>
    <inlineHelpText>Is patient still under your care for this condition?</inlineHelpText>
    <label>Patient under care?</label>
    <type>Checkbox</type>
</CustomField>