force-app/main/default/objects/VOB__c/fields/PatientDOB__c.field-meta.xml
<CustomField>
    <fullName>PatientDOB__c</fullName>
    <label>Client DOB</label>
    <type>Date</type>
</CustomField>