force-app/main/default/objects/VOB__c/fields/PatientFirstName__c.field-meta.xml
<CustomField>
    <fullName>PatientFirstName__c</fullName>
    <description>Represents the First name of patient.</description>
    <label>Patient First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>