force-app/main/default/objects/VOB__c/fields/PatientLastName__c.field-meta.xml
<CustomField>
    <fullName>PatientLastName__c</fullName>
    <description>Represents the Last Name of patient.</description>
    <label>Patient Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>