force-app/main/default/objects/VOB__c/fields/Payer__c.field-meta.xml
<CustomField>
    <fullName>Payer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to associate the Payer with payor.</description>
    <label>Payer</label>
    <referenceTo>Payor__c</referenceTo>
    <relationshipLabel>Insurance (Payer)</relationshipLabel>
    <relationshipName>VOB</relationshipName>
    <type>Lookup</type>
</CustomField>