force-app/main/default/objects/VOB__c/fields/Payer_ID_TX__c.field-meta.xml
<CustomField>
    <fullName>Payer_ID_TX__c</fullName>
    <label>Payer ID (TX)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>