force-app/main/default/objects/VOB__c/fields/payer_ID_UA__c.field-meta.xml
<CustomField>
    <fullName>payer_ID_UA__c</fullName>
    <label>Payer ID (UA)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>