force-app/main/default/objects/VOB__c/fields/Payer_Name__c.field-meta.xml
<CustomField>
    <fullName>Payer_Name__c</fullName>
    <description>Name of the entity responsible for reimbursing healthcare services.</description>
    <label>Payer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>