force-app/main/default/objects/VOB__c/fields/Permanent_disfigurement__c.field-meta.xml
<CustomField>
    <fullName>Permanent_disfigurement__c</fullName>
    <inlineHelpText>Will injury result in permanent disfigurement or disability?</inlineHelpText>
    <label>Permanent disfigurement?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not determinable at this time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>