force-app/main/default/objects/VOB__c/fields/PHP__c.field-meta.xml
<CustomField>
    <fullName>PHP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>S0201(PHP) Covered?</label>
    <type>Checkbox</type>
</CustomField>