force-app/main/default/objects/VOB__c/fields/PHP_cal__c.field-meta.xml
<CustomField>
    <fullName>PHP_cal__c</fullName>
    <label>PHP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>