force-app/main/default/objects/VOB__c/fields/PHP_Inpatient_Or_Outpatient__c.field-meta.xml
<CustomField>
    <fullName>PHP_Inpatient_Or_Outpatient__c</fullName>
    <inlineHelpText>Is PHP (H0035 / S0201) considered In-Patient or Out-Patient?</inlineHelpText>
    <label>PHP is In-Patient or Out-Patient?</label>
    <length>250</length>
    <type>Text</type>
</CustomField>