force-app/main/default/objects/VOB__c/fields/Plan_Benefit_Name__c.field-meta.xml
<CustomField>
    <fullName>Plan_Benefit_Name__c</fullName>
    <description>Represents the name of the benefits associate with the insurance plan.</description>
    <label>Plan Benefit Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>