force-app/main/default/objects/VOB__c/fields/Plan_Number__c.field-meta.xml
<CustomField>
    <fullName>Plan_Number__c</fullName>
    <description>The plan number associate with the insurance coverage.</description>
    <label>Plan Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>