force-app/main/default/objects/VOB__c/fields/Plan_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Plan_Sponsor__c</fullName>
    <description>Responsible for creating a health care plan for employees.</description>
    <label>Plan Sponsor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>