force-app/main/default/objects/VOB__c/fields/Plan_Type__c.field-meta.xml
<CustomField>
    <fullName>Plan_Type__c</fullName>
    <description>Type of insurance plan, such as Silver, Automobile Medical, Blue Cross/Blue Shield, Champus, Commercial Insurance Co, etc</description>
    <label>Insurance Plan Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Automobile Medical</fullName>
            </value>
            <value>
                <fullName>Blue Cross/Blue Shield</fullName>
            </value>
            <value>
                <fullName>Champus</fullName>
            </value>
            <value>
                <fullName>Commercial Insurance Co.</fullName>
            </value>
            <value>
                <fullName>Dental Maintenance Organization</fullName>
            </value>
            <value>
                <fullName>Disability</fullName>
            </value>
            <value>
                <fullName>Exclusive Provider Organization (EPO)</fullName>
            </value>
            <value>
                <fullName>Health Maintenance Organization</fullName>
            </value>
            <value>
                <fullName>Health Maintenance Organization (HMO) Medicare Risk</fullName>
            </value>
            <value>
                <fullName>Indemnity Insurance</fullName>
            </value>
            <value>
                <fullName>Liability Medical</fullName>
            </value>
            <value>
                <fullName>Medicaid</fullName>
            </value>
            <value>
                <fullName>Medicare Part A</fullName>
            </value>
            <value>
                <fullName>Medicare Part B</fullName>
            </value>
            <value>
                <fullName>Mutually Defined</fullName>
            </value>
            <value>
                <fullName>Other Federal Programs</fullName>
            </value>
            <value>
                <fullName>Other Non-Federal Programs</fullName>
            </value>
            <value>
                <fullName>Point of Service (POS)</fullName>
            </value>
            <value>
                <fullName>Preferred Provider Organization (PPO)</fullName>
            </value>
            <value>
                <fullName>Veterans Affairs Plan</fullName>
            </value>
            <value>
                <fullName>Worker&apos;s Compensation Health claim</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Title V</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>