force-app/main/default/objects/VOB__c/fields/Policy_Holder_DOB__c.field-meta.xml
<CustomField>
    <fullName>Policy_Holder_DOB__c</fullName>
    <description>The date of birth of the policyholder.</description>
    <label>Policy Holder DOB</label>
    <type>Date</type>
</CustomField>