force-app/main/default/objects/VOB__c/fields/Policy_Holder_DOB_Sec__c.field-meta.xml
<CustomField>
    <fullName>Policy_Holder_DOB_Sec__c</fullName>
    <label>Policy Holder DOB</label>
    <type>Date</type>
</CustomField>