force-app/main/default/objects/VOB__c/fields/Policy_Holder_Name_Sec__c.field-meta.xml
<CustomField>
    <fullName>Policy_Holder_Name_Sec__c</fullName>
    <description>Represents the Policy Holder Name of secondary Insured.</description>
    <label>Policy Holder Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>