force-app/main/default/objects/VOB__c/fields/PreAuth_Identifier__c.field-meta.xml
<CustomField>
    <fullName>PreAuth_Identifier__c</fullName>
    <description>Unique identifier for pre-authorization.</description>
    <label>Pre-Auth Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>