force-app/main/default/objects/VOB__c/fields/PreAuth_Name__c.field-meta.xml
<CustomField>
    <fullName>PreAuth_Name__c</fullName>
    <description>Name associate with pre-authorization.</description>
    <label>Pre-Auth Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>