force-app/main/default/objects/VOB__c/fields/Precertification_Required_for__c.field-meta.xml
<CustomField>
    <fullName>Precertification_Required_for__c</fullName>
    <label>Precertification Required for?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>INPT (Detox &amp; Res)</fullName>
            </value>
            <value>
                <fullName>PHP</fullName>
            </value>
            <value>
                <fullName>IOP</fullName>
            </value>
            <value>
                <fullName>OP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>