force-app/main/default/objects/VOB__c/fields/Property_Casualty_Agency_ClaimNo_WC__c.field-meta.xml
<CustomField>
    <fullName>Property_Casualty_Agency_ClaimNo_WC__c</fullName>
    <label>Property &amp; Casualty Agency Claim #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>