force-app/main/default/objects/VOB__c/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to associate the Provider with Account.</description>
    <label>Provider</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Provider__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Template Provider</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Provider__c</referenceTo>
    <relationshipLabel>Insurance</relationshipLabel>
    <relationshipName>VOB</relationshipName>
    <type>Lookup</type>
</CustomField>