force-app/main/default/objects/VOB__c/fields/Pt_disabled_unable_to_work_from_AA__c.field-meta.xml
<CustomField>
    <fullName>Pt_disabled_unable_to_work_from_AA__c</fullName>
    <description>Represents the date from which the patient is unable to work due to disability.</description>
    <label>Patient&apos;s disabled(unable to work) from:</label>
    <type>Date</type>
</CustomField>