force-app/main/default/objects/VOB__c/fields/Pt_had_similar_condition_AA__c.field-meta.xml
<CustomField>
    <fullName>Pt_had_similar_condition_AA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field Indicates whether the patient has had a similar medical condition in the past.</description>
    <label>Patient ever had same/similar condition?</label>
    <type>Checkbox</type>
</CustomField>