force-app/main/default/objects/VOB__c/fields/Purchase_Plan_Name__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Plan_Name__c</fullName>
    <description>Name of the plan associate with a purchase.</description>
    <label>Purchase Plan Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>