force-app/main/default/objects/VOB__c/fields/Reason_for__c.field-meta.xml
<CustomField>
    <fullName>Reason_for__c</fullName>
    <description>Reason provided if a claim is denied, such as Insufficient Benefits, Unwilling to travel, Clinical denial, Medical Denial.</description>
    <label>Reason for denial</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Insufficient Benefits</fullName>
            </value>
            <value>
                <fullName>Unwilling to travel</fullName>
            </value>
            <value>
                <fullName>Clinical denial</fullName>
            </value>
            <value>
                <fullName>Medical Denial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>