force-app/main/default/objects/VOB__c/fields/Ref__c.field-meta.xml
<CustomField>
    <fullName>Ref__c</fullName>
    <label>Ref:</label>
    <length>250</length>
    <type>Text</type>
</CustomField>