force-app/main/default/objects/VOB__c/fields/RefNumber__c.field-meta.xml
<CustomField>
    <fullName>RefNumber__c</fullName>
    <label>Ref#</label>
    <length>250</length>
    <type>Text</type>
</CustomField>