force-app/main/default/objects/VOB__c/fields/Relationship_to_client__c.field-meta.xml
<CustomField>
    <fullName>Relationship_to_client__c</fullName>
    <label>Relationship to client</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Self</fullName>
            </value>
            <value>
                <fullName>Parent</fullName>
            </value>
            <value>
                <fullName>Spouse</fullName>
            </value>
            <value>
                <fullName>Medical/Legal Professional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>