force-app/main/default/objects/VOB__c/fields/Remaining_Deductible__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Deductible__c</fullName>
    <label>Remaining Deductible</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>